[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/ui/dialogueOption.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/dynamic_fonts/comicoro.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/ui/optionsbubble.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "fadeIn"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "fadeOut"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="dialogueOption" type="TextureButton"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 80.0
margin_bottom = 24.0
grow_horizontal = 0
rect_min_size = Vector2( 80, 24 )
size_flags_horizontal = 8
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
modulate = Color( 0.141176, 0.192157, 0.2, 1 )
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 8.0
margin_bottom = 6.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
patch_margin_left = 7
patch_margin_top = 3
patch_margin_right = 7
patch_margin_bottom = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="optionText" type="Label" parent="."]
anchor_top = -0.04
anchor_bottom = -0.04
margin_left = 1.38528
margin_top = 4.64825
margin_right = 95.3853
margin_bottom = 39.6482
rect_min_size = Vector2( 94, 35 )
custom_fonts/font = ExtResource( 2 )
text = "We don't sell that to kids"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fadeIn = SubResource( 1 )
anims/fadeOut = SubResource( 2 )
[connection signal="focus_entered" from="." to="." method="_on_dialogueOption_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_dialogueOption_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_dialogueOption_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_dialogueOption_mouse_exited"]
